# franklin-admin

./: .nojekyll  CHANGELOG.md  encypt_module.py  pyproject.toml  search.json
.github/workflows/: conda-release.yml  pypi-release.yml
api/: index.html  launch_exercise.html  users.html
conda-build/: meta.yaml
docs/: _quarto.yml  objects.txt
docs/api/: _sidebar.yml  index.qmd  users.qmd
docs/pages/: index.qmd  setup.qmd  user_management.qmd
notebooks/: example-preview.html  example.html  example.out.ipynb
pages/: getting_started.html  overview.html
src/franklin_admin/: encrypt.py  git.py  howto.py  password.py  users.py
