[build-system]
requires = ["setuptools >= 65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "franklin-admin"
version = '0.1.13'
classifiers = [
  "Development Status :: 5 - Beta",
  "Intended Audience :: Education",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">= 3.9"
dependencies = [
    'setuptools'
    'requests>=2.32.3',
    'colorama>=0.4.6',
    'readchar>=4.0.5',
    'click',
    'click-plugins',
    'psutil',
    'jupyter',
    'packaging',
    'pyyaml',
    'pyperclip',
    'selenium',
    'webdriver-manager',
    'rapidfuzz',
    'pycryptodome',
]
authors = [
  {name = "Kasper Munch", email = "kaspermunch@birc.au.dk"},
]
maintainers = [
  {name = "Kasper Munch", email = "kaspermunch@birc.au.dk"},
]
description = "Terminal client for Jupyter exercises"
keywords = ["teaching", "jupyter", "docker", "gitlab"]
readme = "README.md"
# license = "MIT"

[project.urls]
Homepage = "https://munch-group.org/franklin-admin"
Documentation = "https://munch-group.org/franklin"
Repository = "https://github.com/munch-group/franklin-admin.git"
Issues = "https://github.com/munch-group/franklin-admin/issues"

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."franklin.plugins"]
password = "franklin_admin.users:password"
token = "franklin_admin.users:token"
find = "franklin_admin.users:find"
grant = "franklin_admin.users:grant"

# [project.entry-points."franklin.plugins"]
# create = "franklin_admin.git:create_exercise"
# edit = "franklin_admin.git:edit_cycle"

# [project.entry-points."franklin..plugins"]
# git = "franklin_admin.git:git"

# [project.entry-points."franklin.manage.plugins"]
# create = "franklin_admin.git:create_exercise"

# [project.entry-points."franklin.howto.plugins"]
# docker = "franklin_admin.howto:docker"

[tool.setuptools.package-data]
franklin_admin = [
  "data/*.yaml",
  "data/gitui/*",
  "data/admin/*.enc", 
  ]


[tool.pixi.workspace]
channels = ["conda-forge", "munch-group"]
platforms = ["osx-arm64", "win-64", "osx-64", "linux-64"]

[target.osx-arm64.dependencies]
setuptools = "*"

# [target.osx-arm64.tool.pixi.pypi-dependencies]
# franklin_admin = { path = ".", editable = true }
# franklin = { path = "../franklin", editable = true }

[tool.pixi.tasks]

